<resources>
    <string name="app_name">Bio</string>
    <string name="name">Rajarshi Vaidya</string>
    <string name="my_bio">Lorem ipsum dolor sit amet, <u><i>consectetur adipiscing elit</i></u>. Maecenas suscipit mauris ipsum, in cursus lacus malesuada et. Integer interdum at dolor condimentum pulvinar. Proin vitae dictum nulla. Cras sed pellentesque mauris, in imperdiet mi. Vivamus eu scelerisque magna, vel tincidunt magna. Nulla libero nibh, elementum a consectetur in, fermentum fermentum lorem. Praesent molestie justo vitae odio interdum, a venenatis sapien tincidunt. In sodales tortor nisl, eu commodo eros pulvinar faucibus. Vivamus tellus nisi, pretium ut convallis vitae, facilisis sed erat. Sed sit amet neque mi.\n\nAenean ligula nunc, vulputate ac vehicula eu, tincidunt at dui. Morbi condimentum, eros at mollis interdum, nisl ipsum varius massa, eu auctor lorem erat vel tortor. Proin quis sapien semper turpis dictum venenatis. Sed condimentum tellus at justo semper sagittis. Praesent varius molestie ex. Aliquam porta, felis et hendrerit tincidunt, nibh turpis lacinia arcu, in vehicula nibh magna at turpis. Curabitur molestie arcu quis lacus vehicula imperdiet. Vivamus et mollis nibh, ac varius libero. Sed a lorem eu odio porta congue sed sed tortor. Morbi eget sagittis nisl. Sed blandit nunc hendrerit urna tincidunt vehicula. Phasellus gravida malesuada enim.\n\nIn ultrices aliquet eros non pharetra. In a pharetra diam, at dictum felis. In aliquet aliquet dolor. In nisl metus, finibus vitae tincidunt et, rhoncus nec nisl. Donec eros justo, tempus et ex eget, rutrum aliquet massa. Cras rhoncus lorem eget ipsum bibendum aliquam. Phasellus est purus, placerat a nisi eget, gravida dapibus purus. Praesent lacus nulla, consequat vel aliquet eu, efficitur non dui. Nullam malesuada porta dictum. Nulla facilisi. Integer blandit diam sit amet risus ornare elementum.\n\nEtiam tristique nulla eu nisl laoreet, vitae interdum ex blandit. Nunc tristique consectetur maximus. Ut vitae turpis massa. Fusce sit amet quam finibus, lobortis lorem eget, convallis leo. Pellentesque sem dui, aliquam vitae iaculis nec, tincidunt in tortor. Nunc ut purus sed nisi molestie volutpat. Nam ac metus iaculis, molestie quam et, fermentum enim. Etiam mollis commodo commodo. Mauris vel lorem ipsum.\n\nMorbi tempor, purus quis tempor sodales, dui nisi consectetur risus, in finibus est metus quis diam. Quisque sed pretium magna, in porttitor urna. Etiam interdum nisl porta, malesuada nisl at, congue tortor. Nulla et orci diam. Sed vel tellus magna. Duis non sodales arcu. Aliquam eu nisl non felis sollicitudin pharetra. Vivamus facilisis mi ac placerat tincidunt. Mauris commodo est non sem venenatis, et euismod elit vestibulum. Sed ac sapien viverra, aliquam lectus quis, volutpat nisi. Maecenas rutrum non lacus ut vehicula. Nam eu ipsum semper, maximus nibh eu, laoreet ex. In non diam facilisis, sagittis metus id, fringilla tortor.</string>
    <string name="hobby_hint_text">Enter your hobbies</string>
    <string name="done">Done</string>
    <string name="image_description">Android robot image</string>
</resources>