<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C86B6B"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        style="@style/nameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/txt_hobbies"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hobby_hint_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#252525"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_done"
        style="@style/generalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="setHobbies"
        android:text="@string/done" />

    <TextView
        android:id="@+id/lbl_hobbies"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:visibility="gone" />

    <ScrollView
        style="@style/nameStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/generalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/my_bio"
            android:textColor="#000000" />
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>